...
                className="flex-row items-center justify-between bg-white h-14 px-4 rounded-2xl w-full"
                disabled={!!pendingStrategy}
                onPress={() => handleSSO('oauth_google')}
            >
                <View className="flex-row items-center gap-x-3">
                    <GoogleSvg />
                    <Text className="text-black font-semibold text-base">Continue with Google</Text>
                </View>
                {pendingStrategy === 'oauth_google'
                    ? <ActivityIndicator size="small" color="#000000" />
                    : <ChevronRight size={18} color="#A3A3A3" />}
            </TouchableOpacity>

...
                className="flex-row items-center justify-between bg-white h-14 px-4 rounded-2xl w-full"
                disabled={!!pendingStrategy}
                onPress={() => handleSSO('oauth_apple')}
            >
                <View className="flex-row items-center gap-x-3">
                    <AppleSvg />
                    <Text className="text-black font-semibold text-base">Continue with Apple</Text>
                </View>
                {pendingStrategy === 'oauth_apple'
                    ? <ActivityIndicator size="small" color="#000000" />
                    : <ChevronRight size={18} color="#A3A3A3" />}
            </TouchableOpacity>

...
